--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,13 +18,18 @@ jobs:
         with:
           dotnet-version: '6.0.x'
 
+      - name: Create dummy SMAPI environment
+        run: |
+          mkdir -p smapi/StardewModdingAPI
+          echo "// dummy SMAPI" > smapi/StardewModdingAPI/StardewModdingAPI.dll
+
       - name: Build the mod
-        run: dotnet build UsefulPets/UsefulPets.csproj --configuration Release -p:GamePath=none
+        run: dotnet build UsefulPets/UsefulPets.csproj --configuration Release -p:GamePath=${{ github.workspace }}/smapi
 
       - name: Package the mod
         run: |
           mkdir -p dist/UsefulPets
-          cp UsefulPets/bin/Release/net6.0/UsefulPets.dll dist/UsefulPets/
+          cp UsefulPets/UsefulPets/bin/Release/net6.0/UsefulPets.dll dist/UsefulPets/
           cp UsefulPets/manifest.json dist/UsefulPets/
           cd dist
           zip -r UsefulPets-${{ github.ref_name }}.zip UsefulPets
