remove gitlab releases and switch to just adding release zip to git

--- a/UsefulPets/manifest.json
+++ b/UsefulPets/manifest.json
@@ -1,7 +1,7 @@
 ﻿{
     "Name": "Useful Pets",
     "Author": "QuietOrbit",
-    "Version": "0.1.0",
+    "Version": "%ProjectVersion%",
     "Description": "A mod which allows your pets to earn their keep on your farm.",
     "UniqueID": "QuietOrbit.UsefulPets",
     "EntryDll": "UsefulPets.dll",
